tests/ui/g-control-kind-out-of-band-label.stderr
error[E0080]: evaluation panicked: control labels must stay inside the reserved protocol-control range
 --> src/global.rs
  |
  |         validate_control_label_contract::<LABEL, K>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<hibana::global::Message<hibana::global::LabelMarker<40>, hibana::substrate::cap::GenericCapToken<OutOfBandKind>, OutOfBandKind> as hibana::global::MessageControlSpec>::CONTROL` failed inside this call
  |
note: inside `hibana::global::validate_control_label_contract::<40, OutOfBandKind>`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/global.rs
  |
  |             panic!("control labels must stay inside the reserved protocol-control range");
  |             ----------------------------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  |             let path = match <M as MessageControlSpec>::CONTROL {
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         crate::global::validate_sendable_message::<M>();
  | |         if <M as MessageControlSpec>::IS_CONTROL {
  | |             let is_self_send = <<From as steps::RoleEq<To>>::Output as steps::Bool>::VALUE;
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<40>, GenericCapToken<OutOfBandKind>, OutOfBandKind>, 0>`
  --> tests/ui/g-control-kind-out-of-band-label.rs:45:13
   |
45 |       let _ = g::send::<
   |  _____________^
46 | |         g::Role<0>,
47 | |         g::Role<1>,
48 | |         g::Msg<40, GenericCapToken<OutOfBandKind>, OutOfBandKind>,
49 | |         0,
50 | |     >();
   | |_______^
